fix inital loading misalignments

--- a/styles/ui/slideshow.css
+++ b/styles/ui/slideshow.css
@@ -20,3 +20,10 @@
     }
   }
 }
+
+/* TODO: make this as per the slideshow settings passed */
+.swiper:not(.swiper-initialized) {
+  .swiper-wrapper .swiper-slide {
+    @apply w-1/3 mr-4; 
+  }
+}
